# python-tkinter-boilerplate

./: .env.example.prod  CHANGELOG.md  README.md  app.spec  build.bat  pyproject.toml
.github/workflows/: ci.yml
src/configs/: default_config.py
src/constants/: messages.py
src/data_access/: user_dao.py
src/models/: user_model.py
src/services/: auth_service.py  hash_service.py
src/ui/: interface_app.py  styles.py
src/ui/components/: labeled_entry.py
src/ui/views/: login_view.py  main_view.py  register_view.py
src/utils/: __init__.py  dialogs.py  error_handler.py  exceptions_decorator.py  tkinter_exception_hook.py
test/test_constants/: test_messages.py
test/test_services/: test_auth_service.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_labeled_entry.py
test/test_ui/test_views/: test_login_view.py  test_main_view.py  test_register_view.py
test/test_utils/: test_error_handler.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_data_access/: test_user_dao.py
tests/test_models/: test_user_model.py
tests/test_services/: test_auth_service.py  test_hash_service.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_labeled_entry.py
tests/test_ui/test_views/: test_login_view.py  test_main_view.py  test_register_view.py
tests/test_utils/: test_dialogs.py  test_exceptions_decorator.py  test_tkinter_exception_hook.py
